letter spacing fix

--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,7 @@ header h1 {
 h1#title_bottom {
     font-family: "Fortunates";
     margin-top: 5px;
+    letter-spacing: 0px;
 }
 
 #sign{
